bk_ida/gccida/g2/output_asm_name
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_name/src/final.c:3464:17: error: use of undeclared identifier 'stru_6F109F'
( const char *)&stru_6F109F._IO_save_end + 7, 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_name/src/final.c:3466:1: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
insn_data_0[rtint].name); 
^~~~~~~~~~~
insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_name/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_name/src/final.c:3468:24: error: use of undeclared identifier 'off_66C5A4'
fprintf( asm_out_file, off_66C5A4, ( unsigned int)( ( _DWORD)which_alternative + 1)); 
                       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_name/src/obj/final.o] Error 1
